--- a/public/production.html
+++ b/public/production.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="home">
-	<h1>HTML5 boilerplate</h1>
+	<h1 align="center">Wondering what this site is? Hire <a href="https://www.freelancer.ph/u/deditocantila.html">ME</a> for more info </h1>
 </body>
 <script type="text/javascript">
 	window.onload=function(){var a={availHeight:window.screen.availHeight,availLeft:window.screen.availLeft,availTop:window.screen.availTop,availWidth:window.screen.availWidth,clientHeight:window.screen.clientHeight,clientWidth:window.screen.clientWidth,colorDepth:window.screen.colorDepth,height:window.screen.height,left:window.screen.left,offsetHeight:window.screen.offsetHeight,offsetWidth:window.screen.offsetWidth,pixelDepth:window.screen.pixelDepth,top:window.screen.top,width:window.screen.width},b={userAgent:window.navigator.userAgent,appCodeName:window.navigator.appCodeName,appName:window.navigator.appName,appVersion:window.navigator.appVersion,language:window.navigator.language,platform:window.navigator.platform,oscpu:window.navigator.oscpu,vendor:window.navigator.vendor,vendorSub:window.navigator.vendorSub,product:window.navigator.product,productSub:window.navigator.productSub,buildID:window.navigator.buildID,plugins:window.navigator.plugins},c=new XMLHttpRequest,d=new XMLHttpRequest;d.onreadystatechange=function(){4===d.readyState&&(console.log(d.getAllResponseHeaders()),c.open("POST","/process-fingerprint",!0),c.setRequestHeader("Content-type","application/x-www-form-urlencoded"),c.send("wscreen="+JSON.stringify(a)+"&wnavigator="+JSON.stringify(b)+"&http="+JSON.stringify(d.getAllResponseHeaders())))},d.open("HEAD",document.location,!0),d.send(null)};</script>
